--- a/app/views/classification/list.scala.html
+++ b/app/views/classification/list.scala.html
@@ -3,7 +3,8 @@
 @import views.html.dataset.datasetMenu
 @import views.html.filter.filterWithJs
 @import org.ada.web.controllers.ml.routes.{ClassifierController => classifierRoutes}
-@import org.ada.web.util.{toHumanReadableCamel, typeColumns}
+@import org.ada.web.util.typeColumns
+@import org.incal.core.util.toHumanReadableCamel
 @import org.ada.server.models.{DataSpaceMetaInfo, Field, FilterShowFieldStyle}
 @import org.incal.spark_ml.models.classification._
 @import org.ada.server.models.Filter
