--- a/app/views/dataset/cumulativeCount.scala.html
+++ b/app/views/dataset/cumulativeCount.scala.html
@@ -4,11 +4,12 @@
 @import views.html.elements.fieldTypeaheadDiv
 @import org.ada.web.controllers.dataset.DataSetWebContext._
 @import org.ada.web.controllers.dataset.DataSetWebContext
+@import org.ada.server.models.DataSetSetting
 
 @(
     dataSetName: String,
     filterSpec: models.Filter,
-    filterShowFieldStyle: Option[FilterShowFieldStyle.Value],
+    setting: DataSetSetting,
     field: Option[Field],
     groupField: Option[Field],
     dataSpaceMetaInfos: Traversable[DataSpaceMetaInfo]
@@ -120,7 +121,7 @@
 @widgetsScreen(
     Messages("cumulativeCount.title", dataSetName),
     Seq(filterSpec),
-    filterShowFieldStyle,
+    setting,
     dataSpaceMetaInfos,
     inputElements,
     Some(extraActions),
