--- a/app/views/dataset/show.scala.html
+++ b/app/views/dataset/show.scala.html
@@ -17,5 +17,5 @@
     data.nonNullOnly,
     data.fieldNameLabelAndRendererMap,
     Some(datasetMenu(data.dataSpaceMetaInfos)),
-    Some(datasetSubNavWithJs())
+    Some(datasetSubNavWithJs(data.setting))
 )
