--- a/app/views/dataset/transformSeries.scala.html
+++ b/app/views/dataset/transformSeries.scala.html
@@ -14,11 +14,12 @@
 @import views.html.dataset.dynamicFieldTable
 @import views.html.layout.formErrors
 @import org.ada.web.util.enumToValueString
+@import org.ada.server.models.DataSetSetting
 
 @(
     dataSetName: String,
     form: Form[DataSetSeriesTransformationSpec],
-    filterShowFieldStyle: Option[FilterShowFieldStyle.Value],
+    setting: DataSetSetting,
     dataSpaceMetaInfos: Traversable[DataSpaceMetaInfo]
 )(
     implicit context: DataSetWebContext
@@ -57,7 +58,7 @@
                 $('#preserveFieldNameDiv #fieldTypeahead'),
                 $('#preserveFieldNameDiv #fieldName'),
                 '@Html(dataSetRouter.allFields.url)',
-                @filterShowFieldStyle.getOrElse(NamesAndLabels).id
+                @setting.filterShowFieldStyle.getOrElse(NamesAndLabels).id
             )
         })
 
@@ -78,7 +79,7 @@
     </script>
 }
 
-@main(Messages("seriesTransformation.title", dataSetName), Some(datasetMenu(dataSpaceMetaInfos)), Some(datasetSubNavWithJs()), None, Some(bottomResources), Some(formErrors("transformSeries", form.errors))) {
+@main(Messages("seriesTransformation.title", dataSetName), Some(datasetMenu(dataSpaceMetaInfos)), Some(datasetSubNavWithJs(setting)), None, Some(bottomResources), Some(formErrors("transformSeries", form.errors))) {
 
     <div class="page-header">
         <h3>
