--- a/app/views/datasetimport/list.scala.html
+++ b/app/views/datasetimport/list.scala.html
@@ -3,7 +3,8 @@
 @import views.html.dataset.{datasetMenu}
 @import views.html.filter.filterWithJs
 @import org.ada.web.controllers.dataset.dataimport.routes.{DataSetImportController => dataSetImportRoutes}
-@import org.ada.web.util.{formatScheduleTime, toHumanReadableCamel, typeColumns}
+@import org.incal.core.util.toHumanReadableCamel
+@import org.ada.web.util.{formatScheduleTime, typeColumns}
 @import org.ada.server.models.{DataSpaceMetaInfo, Field, Filter, FilterShowFieldStyle}
 @import org.ada.server.models.dataimport._
 @import org.ada.server.models.ScheduledTime
