--- a/app/views/datasetimport/settingPanel.scala.html
+++ b/app/views/datasetimport/settingPanel.scala.html
@@ -1,4 +1,4 @@
-@import org.ada.web.util.toHumanReadableCamel
+@import org.incal.core.util.toHumanReadableCamel
 @import views.html.elements._
 @import org.ada.server.models.{StorageType, FilterShowFieldStyle}
 @import org.ada.web.util.enumToValueString
