--- a/app/views/datasetsetting/elements.scala.html
+++ b/app/views/datasetsetting/elements.scala.html
@@ -1,10 +1,16 @@
 @import views.html.elements.{inputText, inputTextReadonly, labelValue, checkbox, select, inputFieldTypeahead}
 @import views.html.elements.{fieldTypeahead, inputTypeahead}
+@import views.html.table.{dynamicTwoColumnTable, dynamicThreeColumnTable}
 @import views.html.attributeLabel
 @import org.ada.server.models.{DataSetSetting, StorageType, FilterShowFieldStyle}
-@import org.ada.web.util.toHumanReadableCamel
+@import org.incal.core.util.toHumanReadableCamel
 
-@(form: Form[DataSetSetting])(implicit msg: play.api.i18n.Messages)
+@import org.ada.server.models.Link
+@import org.ada.server.models.Menu
+@import org.incal.play.controllers.WebContext
+@import org.incal.play.controllers.WebContext._
+
+@(form: Form[DataSetSetting])(implicit webContext: WebContext)
 
 @inputTextReadonly("dataSetSetting", "dataSetId", form)
 
@@ -35,4 +41,35 @@
     "ownerTypeahead",
     form,
     "User"
+)
+
+@rowToModel = {
+    <script type="text/javascript">
+          function rowToModel(row) {
+                function value(x) { return getRowValue(row, x) }
+
+                var header = value("field1")
+                if (!header)
+                    header = ""
+                var label = value("field2")
+                var url = value("field3")
+
+                return {"concreteClass": "org.ada.server.models.Menu", "header": header, "links": [{"label": label, "url": url}]}
+          }
+    </script>
+}
+
+@dynamicThreeColumnTable(
+    "extraNavigationItem",
+    "Extra Navigation Items",
+    "Menu Header",
+    "Link Label",
+    "Link URL",
+    form.value.map(_.extraNavigationItems.flatMap { navigationItem =>
+        navigationItem match {
+            case Link(label, url) => Seq(("", label, url))
+            case Menu(header, links) => links.map( link => (header, link.label, link.url))
+        }
+    }).getOrElse(Nil),
+    Some(rowToModel)
 )
