--- a/app/views/datasettrans/list.scala.html
+++ b/app/views/datasettrans/list.scala.html
@@ -3,7 +3,8 @@
 @import views.html.dataset.{datasetMenu}
 @import views.html.filter.filterWithJs
 @import org.ada.web.controllers.dataset.datatrans.routes.{DataSetTransformationController => dataSetTransformationRoutes}
-@import org.ada.web.util.{formatScheduleTime, toHumanReadableCamel, typeColumns, shorten}
+@import org.incal.core.util.toHumanReadableCamel
+@import org.ada.web.util.{formatScheduleTime, typeColumns, shorten}
 @import org.ada.server.models.{DataSpaceMetaInfo, Field, Filter, FilterShowFieldStyle}
 @import org.ada.server.models.datatrans._
 @import org.ada.server.models.ScheduledTime
