--- a/app/views/regressionrun/show.scala.html
+++ b/app/views/regressionrun/show.scala.html
@@ -8,11 +8,13 @@
 @import play.api.libs.json.Json
 @import play.api.libs.json.JsObject
 @import org.ada.web.controllers.dataset.MLRunRouter
+@import org.ada.server.models.DataSetSetting
 
 @(
     router: MLRunRouter)(
     title: String,
     item: RegressionResult,
+    setting: DataSetSetting,
     dataSpaceMetaInfos: Traversable[DataSpaceMetaInfo]
 )(
     implicit context: DataSetWebContext
@@ -26,5 +28,5 @@
     false,
     Map(),
     Some(datasetMenu(dataSpaceMetaInfos)),
-    Some(datasetSubNavWithJs())
+    Some(datasetSubNavWithJs(setting))
 )
