--- a/app/views/category/edit.scala.html
+++ b/app/views/category/edit.scala.html
@@ -7,6 +7,7 @@
 @import org.ada.server.models
 @import org.ada.web.controllers.dataset.DataSetWebContext._
 @import org.ada.web.controllers.dataset.DataSetWebContext
+@import org.ada.server.models.DataSetSetting
 
 @(
     displayName: String,
@@ -14,7 +15,7 @@
     form: Form[Category],
     categories: Traversable[Category],
     fields: Traversable[models.Field],
-    showFieldStyle: Option[FilterShowFieldStyle.Value],
+    setting: DataSetSetting,
     dataSpaceMetaInfos: Traversable[DataSpaceMetaInfo]
 )(
     implicit context: DataSetWebContext
@@ -43,7 +44,7 @@
                 $('#newItemTypeahead'),
                 $('#newItem'),
                 '@Html(dataSetRouter.allFields.url)',
-                @showFieldStyle.getOrElse(FilterShowFieldStyle.NamesAndLabels).id
+                @setting.filterShowFieldStyle.getOrElse(FilterShowFieldStyle.NamesAndLabels).id
             );
         })
     </script>
@@ -58,5 +59,5 @@
     categoryRouter.plainList,
     Some(categoryRouter.delete(id)),
     Some(datasetMenu(dataSpaceMetaInfos)),
-    Some(datasetSubNavWithJs())
+    Some(datasetSubNavWithJs(setting))
 )
