--- a/app/views/classificationrun/createTemporal.scala.html
+++ b/app/views/classificationrun/createTemporal.scala.html
@@ -13,10 +13,11 @@
 @import org.incal.spark_ml.models.VectorScalerType
 @import org.incal.spark_ml.models.classification.ClassificationEvalMetric
 @import org.ada.web.controllers.ml.routes
+@import org.ada.server.models.DataSetSetting
 
 @(
     displayName: String,
-    filterShowFieldStyle: Option[FilterShowFieldStyle.Value],
+    setting: DataSetSetting,
     dataSpaceMetaInfos: Traversable[DataSpaceMetaInfo]
 )(
     implicit context: DataSetWebContext
@@ -317,7 +318,7 @@
 
 @mlRunCreate(
     Messages("temporalClassification.title", displayName),
-    filterShowFieldStyle,
+    setting,
     dataSpaceMetaInfos,
     firstColumn,
     secondColumn,
