--- a/app/views/classificationrun/list.scala.html
+++ b/app/views/classificationrun/list.scala.html
@@ -18,6 +18,7 @@
 @import org.incal.spark_ml.models.result.ClassificationResult
 @import org.ada.web.controllers.dataset.MLRunRouter
 @import reactivemongo.bson.BSONObjectID
+@import org.ada.server.models.DataSetSetting
 
 @(
     router: MLRunRouter)(
@@ -30,6 +31,7 @@
     allClassificationRunFields: Traversable[Field],
     mlModelIdNameMap: Map[BSONObjectID, String],
     filterIdNameMap: Map[BSONObjectID, String],
+    setting: DataSetSetting,
     dataSpaceMetaInfos: Traversable[DataSpaceMetaInfo]
 )(
     implicit context: DataSetWebContext
@@ -120,7 +122,7 @@
     Some(table),
     Some(filterWidgetPanel("filterDiv", widgets, 6)),
     Some(datasetMenu(dataSpaceMetaInfos)),
-    Some(datasetSubNavWithJs()),
+    Some(datasetSubNavWithJs(setting)),
     None,
     Some(bottomResources)
 )
