--- a/app/views/clustering/list.scala.html
+++ b/app/views/clustering/list.scala.html
@@ -3,7 +3,8 @@
 @import views.html.dataset.datasetMenu
 @import views.html.filter.filterWithJs
 @import org.ada.web.controllers.ml.routes.{ClusteringController => route}
-@import org.ada.web.util.{toHumanReadableCamel, typeColumns}
+@import org.incal.core.util.toHumanReadableCamel
+@import org.ada.web.util.typeColumns
 @import org.ada.server.models.{DataSpaceMetaInfo, Field, FilterShowFieldStyle}
 @import org.ada.server.models.Filter
 @import org.incal.play.controllers.WebContext._
