--- a/app/views/dataset/datasetSubNavWithJs.scala.html
+++ b/app/views/dataset/datasetSubNavWithJs.scala.html
@@ -1,8 +1,9 @@
 @import views.html.dataset.{datasetSubNav, datasetSubNavJs}
 @import org.ada.web.controllers.dataset.DataSetWebContext._
-
 @import org.ada.web.controllers.dataset.DataSetWebContext
-@()(implicit context: DataSetWebContext)
+@import org.ada.server.models.DataSetSetting
 
-@datasetSubNav()
+@(dataSetSetting: DataSetSetting)(implicit context: DataSetWebContext)
+
+@datasetSubNav(dataSetSetting)
 @datasetSubNavJs()
