--- a/app/views/dataset/distribution.scala.html
+++ b/app/views/dataset/distribution.scala.html
@@ -11,11 +11,12 @@
 @import org.ada.web.util.toJsonHtml
 @import org.ada.web.controllers.dataset.DataSetWebContext._
 @import org.ada.web.controllers.dataset.DataSetWebContext
+@import org.ada.server.models.DataSetSetting
 
 @(
     dataSetName: String,
     filterSpec: Filter,
-    filterShowFieldStyle: Option[FilterShowFieldStyle.Value],
+    setting: DataSetSetting,
     field: Option[Field],
     groupField: Option[Field],
     dataSpaceMetaInfos: Traversable[DataSpaceMetaInfo]
@@ -202,7 +203,7 @@
 @widgetsScreen(
     Messages("distribution.title", dataSetName),
     Seq(filterSpec),
-    filterShowFieldStyle,
+    setting,
     dataSpaceMetaInfos,
     inputElements,
     Some(extraActions),
