--- a/app/views/dataset/fractalis.scala.html
+++ b/app/views/dataset/fractalis.scala.html
@@ -9,13 +9,14 @@
 @import org.ada.web.controllers.dataset.DataSetWebContext._
 @import org.ada.web.controllers.dataset.DataSetWebContext
 @import org.incal.play.routes.CustomDirAssets
+@import org.ada.server.models.DataSetSetting
 
 @(
     domainName: String,
     fractalisServerUrl: String,
     sessionId: String,
     field: Option[Field],
-    filterShowFieldStyle: Option[FilterShowFieldStyle.Value],
+    dataSetSetting: DataSetSetting,
     dataSpaceMetaInfos: Traversable[DataSpaceMetaInfo]
 )(
     implicit context: DataSetWebContext
@@ -53,7 +54,7 @@
                 $('#fieldTypeahead'),
                 $('#fieldName'),
                 '@Html(dataSetRouter.allFields.url)',
-                @filterShowFieldStyle.getOrElse(FilterShowFieldStyle.NamesAndLabels).id
+                @dataSetSetting.filterShowFieldStyle.getOrElse(FilterShowFieldStyle.NamesAndLabels).id
             )
 
             function addFieldToFractalis() {
@@ -122,7 +123,7 @@
     </script>
 }
 
-@main(Messages("fractalis.title", domainName), Some(datasetMenu(dataSpaceMetaInfos)), Some(datasetSubNavWithJs()), None, Some(bottomResources)) {
+@main(Messages("fractalis.title", domainName), Some(datasetMenu(dataSpaceMetaInfos)), Some(datasetSubNavWithJs(dataSetSetting)), None, Some(bottomResources)) {
 
     <div class="page-header">
         <h3>
