--- a/app/views/dataset/heatmap.scala.html
+++ b/app/views/dataset/heatmap.scala.html
@@ -5,11 +5,12 @@
 @import org.ada.web.controllers.dataset.DataSetWebContext._
 @import org.ada.web.controllers.dataset.DataSetWebContext
 @import org.incal.play.routes.CustomDirAssets
+@import org.ada.server.models.DataSetSetting
 
 @(
     dataSetName: String,
     filterSpec: Filter,
-    filterShowFieldStyle: Option[FilterShowFieldStyle.Value],
+    setting: DataSetSetting,
     xField: Option[Field],
     yField: Option[Field],
     valueField: Option[Field],
@@ -172,7 +173,7 @@
 @widgetsScreen(
     Messages("heatmap.title", dataSetName),
     Seq(filterSpec),
-    filterShowFieldStyle,
+    setting,
     dataSpaceMetaInfos,
     inputElements,
     Some(extraActions),
