--- a/app/views/dataset/pearsonCorrelation.scala.html
+++ b/app/views/dataset/pearsonCorrelation.scala.html
@@ -5,11 +5,12 @@
 @import org.ada.web.controllers.dataset.DataSetWebContext._
 @import org.ada.web.controllers.dataset.DataSetWebContext
 @import org.incal.play.routes.CustomDirAssets
+@import org.ada.server.models.DataSetSetting
 
 @(
     dataSetName: String,
     filterSpec: Filter,
-    filterShowFieldStyle: Option[FilterShowFieldStyle.Value],
+    setting: DataSetSetting,
     dataSpaceMetaInfos: Traversable[DataSpaceMetaInfo]
 )(
     implicit context: DataSetWebContext
@@ -147,7 +148,7 @@
 @widgetsScreen(
     Messages("pearsonCorrelation.title", dataSetName),
     Seq(filterSpec),
-    filterShowFieldStyle,
+    setting,
     dataSpaceMetaInfos,
     inputElements,
     Some(extraActions),
