--- a/app/views/dataset/view/showView.scala.html
+++ b/app/views/dataset/view/showView.scala.html
@@ -10,6 +10,7 @@
 @import org.ada.web.controllers.FilterConditionExtraFormats.coreFilterConditionFormat
 @import org.ada.web.controllers.dataset.DataSetWebContext._
 @import org.ada.web.controllers.dataset.{DataSetWebContext, TableViewData}
+@import org.ada.server.models.DataSetSetting
 
 @(
     dataSetName: String,
@@ -19,7 +20,7 @@
     tableViewParts: Seq[TableViewData],
     widgetsCallbackId: String,
     widgetGridElementWidth: Int,
-    filterShowFieldStyle: Option[FilterShowFieldStyle.Value],
+    dataSetSetting: DataSetSetting,
     canEditView: Boolean = false,
     dataSpaceMetaInfos: Traversable[DataSpaceMetaInfo]
 )(
@@ -30,13 +31,13 @@
     <div class="row">
         <div id="singleFilterDiv" class="col-md-10">
             @if(tableViewParts.size == 1) {
-                @viewCountFilters(tableViewParts, filterShowFieldStyle, true)
+                @viewCountFilters(tableViewParts, dataSetSetting.filterShowFieldStyle, true)
             }
         </div>
         <div class="pull-right">
             <ul class="list-inline">
                 <li>
-                    @viewExportDropdown(dataViewId, dataSetName, filterShowFieldStyle)
+                    @viewExportDropdown(dataViewId, dataSetName, dataSetSetting.filterShowFieldStyle)
                 </li>
                 <li>
                     <div class="dropdown">
@@ -91,7 +92,7 @@
 @filtersAndWidgets = {
     <div id="multiFilterDiv">
         @if(tableViewParts.size > 1) {
-            @viewCountFilters(tableViewParts, filterShowFieldStyle, false)
+            @viewCountFilters(tableViewParts, dataSetSetting.filterShowFieldStyle, false)
         }
     </div>
     <hr class="multi-filter-divider" @if(tableViewParts.size < 2) { style="display:none" } />
@@ -230,7 +231,7 @@
     },
     Some(filtersAndWidgets),
     Some(datasetMenu(dataSpaceMetaInfos)),
-    Some(datasetSubNav()),
+    Some(datasetSubNav(dataSetSetting)),
     None,
     Some(bottomResources)
 )
