--- a/app/views/dataview/widgetSpecTable.scala.html
+++ b/app/views/dataview/widgetSpecTable.scala.html
@@ -11,7 +11,7 @@
 @import org.ada.server.dataaccess.JsonUtil
 @import play.api.libs.json.JsArray
 @import reactivemongo.bson.BSONObjectID
-@import org.ada.web.util.toHumanReadableCamel
+@import org.incal.core.util.toHumanReadableCamel
 @import org.ada.server.field.FieldUtil.nameOrLabel
 @import org.ada.web.util.shorten
 
