--- a/app/views/dictionary/list.scala.html
+++ b/app/views/dictionary/list.scala.html
@@ -20,6 +20,7 @@
 @import org.ada.web.models.Widget
 @import org.incal.play.Page
 @import org.incal.core.FilterCondition
+@import org.ada.server.models.DataSetSetting
 
 @(
     domainName : String,
@@ -27,6 +28,7 @@
     conditions: Seq[FilterCondition],
     widgets: Traversable[Widget],
     fieldNameLabels: Traversable[(String, Option[String])],
+    setting: DataSetSetting,
     dataSpaceMetaInfos: Traversable[DataSpaceMetaInfo]
 )(
     implicit context: DataSetWebContext
@@ -166,7 +168,7 @@
     Some(table),
     Some(filterWidgetPanel("filterDiv", widgets, 6)),
     Some(datasetMenu(dataSpaceMetaInfos)),
-    Some(datasetSubNavWithJs()),
+    Some(datasetSubNavWithJs(setting)),
     None,
     Some(bottomResources)
 )
