--- a/app/views/filters/list.scala.html
+++ b/app/views/filters/list.scala.html
@@ -9,11 +9,13 @@
 @import org.ada.web.controllers.dataset.DataSetWebContext._
 @import org.incal.play.Page
 @import org.incal.core.FilterCondition
+@import org.ada.server.models.DataSetSetting
 
 @(
     domainName : String,
     page: Page[Filter],
     conditions: Seq[FilterCondition],
+    setting: DataSetSetting,
     dataSpaceMetaInfos: Traversable[DataSpaceMetaInfo]
 )(
     implicit context: DataSetWebContext
@@ -57,5 +59,5 @@
     Some(table),
     None,
     Some(datasetMenu(dataSpaceMetaInfos)),
-    Some(datasetSubNavWithJs())
+    Some(datasetSubNavWithJs(setting))
 )
