Action table view + 0.8.1 migration scripts

--- a/app/views/classificationrun/create.scala.html
+++ b/app/views/classificationrun/create.scala.html
@@ -101,7 +101,8 @@
                 "repetitions": intValue(repetitions),
                 "crossValidationFolds": intValue(crossValidationFolds),
                 "crossValidationEvalMetric": crossValidationEvalMetric,
-                "binCurvesNumBins": intValue(binCurvesNumBins)
+                "binCurvesNumBins": intValue(binCurvesNumBins),
+                "collectOutputs": false
             }
 
             // Save Options
