--- a/app/views/classificationrun/createTemporal.scala.html
+++ b/app/views/classificationrun/createTemporal.scala.html
@@ -118,7 +118,8 @@
                 "repetitions": intValue(repetitions),
                 "crossValidationFolds": intValue(crossValidationFolds),
                 "crossValidationEvalMetric": crossValidationEvalMetric,
-                "binCurvesNumBins": intValue(binCurvesNumBins)
+                "binCurvesNumBins": intValue(binCurvesNumBins),
+                "collectOutputs": false
             }
 
             // Temporal Learning Setting
